fix the visibility bug

--- a/pages/choiсe/style.css
+++ b/pages/choiсe/style.css
@@ -163,7 +163,6 @@
         background-color: white;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
-        height: 100vh;
         margin-top: 20px;
     }
     .choice__switch{
